<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="99"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:icon="@drawable/ic_action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never"
        />
    <item
        android:id="@+id/action_close"
        android:orderInCategory="101"
        android:icon="@drawable/ic_action_close"
        android:title="@string/action_close"

        app:showAsAction="never"
        />
</menu>
