<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="81dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txt_trasaccion_id"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <ImageView
        android:layout_width="0dp"
        android:layout_height="83dp"
        android:src="@drawable/ic_transaccion_2"
        android:contentDescription="@string/imagen"
        app:layout_constraintRight_toLeftOf="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="9dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="9dp" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/txt_transaccion_concepto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="114dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="114dp" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/txt_trasaccion_concepto"
        android:text="@string/txt_transaccion_concepto"
        android:maxLines="1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        android:layout_marginLeft="20dp" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/txt_transaccion_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView3" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/txt_trasaccion_fecha"
        android:text="@string/txt_transaccion_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_trasaccion_concepto"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_trasaccion_concepto" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/txt_transaccion_importe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView2" />
    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:id="@+id/txt_trasaccion_importe"
        android:text="@string/txt_transaccion_importe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="9dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_trasaccion_fecha"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/txt_trasaccion_fecha" />

</android.support.constraint.ConstraintLayout>