<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_editor_absoluteY="0dp"
    tools:layout_editor_absoluteX="0dp">

    <TextView
        android:id="@+id/txt_menu_id"
        android:layout_width="wrap_content"
        android:visibility="gone"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toLeftOf="parent"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="79dp"
        android:layout_height="0dp"
        android:contentDescription="@string/imagen"
        android:src="@drawable/ic_menu"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView7"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        android:layout_marginLeft="16dp"
        android:id="@+id/imageView3" />

    <TextView
        android:text="@string/txt_menu_fecha"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_menu_fecha"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView6"
        android:id="@+id/textView7" />
    <TextView
        android:id="@+id/txt_menu_fecha"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:text="@string/txt_menu_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        tools:layout_constraintTop_creator="1"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/txt_menu_estado"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/textView7"
        android:layout_marginLeft="16dp" />

    <TextView
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu_estado"
        android:id="@+id/textView6"
        android:layout_marginStart="28dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/txt_menu_estado"
        tools:layout_constraintBaseline_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toRightOf="@+id/imageView3"
        android:layout_marginLeft="28dp" />
    <TextView
        android:id="@+id/txt_menu_estado"
        style="@style/Base.TextAppearance.AppCompat.Medium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_menu_estado"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="10dp"
        android:layout_marginTop="16dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/textView6"
        android:layout_marginLeft="10dp" />

</android.support.constraint.ConstraintLayout>